Fix java version problem on backport